--- a/pixeos/public/css/style.css
+++ b/pixeos/public/css/style.css
@@ -865,7 +865,12 @@ input:focus::placeholder {
 }
 
 .form-control:focus {
-    border-bottom: 1px solid rgb(77, 73, 73) !important;
+    border-bottom: 1px solid #000!important;
+}
+
+.perfil-defecto{
+    max-width: 7rem;
+    min-width: 3rem;
 }
 
 .perfil-grande {
