--- a/publico/css/validar-numeros.css
+++ b/publico/css/validar-numeros.css
@@ -1,5 +1,5 @@
 body{
-    background-color: beige;
+    background-color: #f5f5dc;
     height: 98vh;
     display: flex;
     align-items: center;
