--- a/publico/css/validar-numeros.css
+++ b/publico/css/validar-numeros.css
@@ -15,7 +15,9 @@ div {
     padding: 20px 50px;  
     box-shadow: 10px 5px 5px rgb(78, 72, 78); 
 }
-
+label{
+    display: inline-block;
+}
 p{
     font-size: 20px;
     color:snow; 
@@ -52,4 +54,8 @@ h3{
 #nombre{
     margin-top:.2rem;
     margin-bottom:-.6rem;
+}
+#reinicio{
+    display: block;
+    margin: 0 auto;
 }
