xemicris - light - el muslito

--- a/publico/css/elmuslito.css
+++ b/publico/css/elmuslito.css
@@ -1,233 +1,1 @@
-body{
-    background-color:#fdeef2; /*color de fondo*/
-}
-#cabecera{
-    display: block; /*muestra el elemento con un bloque. Comienza en una nueva línea y ocupa todo el ancho*/
-    position: fixed; /*el elemento permanece en el mismo lugar incluso al desplazar la página*/
-    margin-top: -20px; /*márgen superior externo*/
-    border-bottom: 5px solid black; /*borde inferior*/
-    height: 200px; /*altura del elemento*/
-    width: 100%; /*anchura del elemento*/
-    background-color: lemonchiffon; 
-}
-h1{
-    font-size:80px; /*tamaño de la letra*/
-    margin-top:-150px;
-    margin-left: 400px; /*márgen externo izquierdo*/
-}
-#logo{
-    margin-top: 20px;
-}
-.titulo{
-    text-decoration:none;
-    color:black
-}
-#gif{
-    float:right; /*especifica que el elemento debe flotar a la derecha*/
-    margin-top: -275px;
-    margin-right: 25px; /*márgen externo derecho*/
-}
-.barra{
-    display: block;
-    position: fixed;
-    margin-top: 185px;
-    font-family: Arial, Helvetica, sans-serif; /*tipo de letra*/
-    width: 10%;
-    width: 15%;
-    height:100vh; /*altura del elemento*/
-    background-color: rgba(5,33,51, 0.98);
-}
-.barra ul{
-    padding: 0px; /*borde interno del elemento*/
-    text-align: center; /*alineación del texto en el centro*/
-    margin-top:0;
-}
-.barra li{
-    border-top:1px solid black; /*borde superior*/
-    width: 100%;
-}
-.barra a{
-    display: block;
-    font-size: 25px;
-    color:white; /*color de la letra*/
-    padding: 20px;
-    text-decoration: none; /*elimina la decoración de los enlaces*/
-    list-style: none; /*indica que no se visualicen los marcadores*/
-    transition: .4s all; /*duración de la transición*/
-
-}
-.casa__contenedor{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 0;
-}
-.casa{
-    width: 60px;
-    color:#ffffff;
-    
-}
-.barra h2{
-    font-size: 40px;
-    text-align: center;
-    color:white;
-    padding: 15px;
-    padding-bottom: 7px; /*márgen interior inferior*/
-
-}
-/*selector que coincide con cada elemento que es el último hijo, de un tipo particular,de su padre*/
-.barra ul:last-of-type{ 
-    border-bottom: 1px solid black;
-}
-nav a:hover{
-    font-size: 30px;
-    /*padding: 30px 0px;*/
-    background-color: rgba(22,78,112,0.98);
-}
-#articulo{
-    width: 84%;
-    float: right;
-    margin-top: 240px;
-    margin-left: 350px;
-
-}
-header h2{
-    font-size: 45px;
-}
-h3{
-    font-size: 35px;
-    text-decoration: underline; /*subrayado del elemento*/
-}
-.ingredientes{
-    font-size: 25px;
-}
-#ingr{
-    width: 40%;
-}
-#pollo{
-    margin-top: -350px;
-    margin-left: 45%;
-}
-p{
-    font-size: 25px;
-}
-#video{
-    margin-left: calc(50% - 250px);
-}
-audio{
-    margin-top: 25px;
-    margin-left: calc(50% - 140px);
-}
-footer{
-    display: block;
-    float: right;
-    border-top: 1px solid black;
-    height: 100px;
-    margin-left: 15%;
-    margin-top: 50px;
-    font-family:arial;
-    font-size:25px;
-    text-align:center;
-    font-weight:bold;
-    width:85%;
-}
-#a_img{
-    font-size: 10px;
-}
-/*Diseño responsivo en función del ancho de la ventana del navegador*/
-@media screen and (max-width:1056px){
-    #pollo{
-        margin-left: 50%;
-    }
-    #gif{
-        display: none;
-    }
-}
-@media screen and (max-width:934px){
-    .barra a{
-        font-size: 20px;
-        color:white;
-        display: block;
-        padding: 10px;
-        text-decoration: none;
-        list-style: none;
-        transition: .3s all;
-    
-    }
-    nav a:hover{
-        font-size: 25px;
-        padding: 10px 0px;
-        background-color: rgba(22,78,112,0.98);
-    }
-}
-@media screen and (max-width:818px){
-    .barra h2{
-        font-size: 20px;
-        text-align: center;
-        color:white;
-        padding: 15px;
-        padding-bottom: 7px;
-
-    }
-
-    .barra a{
-        font-size: 15px;
-        color:white;
-        display: block;
-        padding: 10px;
-        text-decoration: none;
-        list-style: none;
-        transition: .3s all;
-    
-    }
-    nav a:hover{
-        font-size: 15px;
-        background-color: rgba(22,78,112,0.98);
-    }
-}
-@media screen and (max-width:759px){
-    h1{
-        font-size: 50px;
-    }
-}
-@media screen and (max-width:721px){
-    #pollo{
-        display: none;
-    }
-    #ingr{
-        width:85%;
-    }
-}
-@media(max-height:500px) and (orientation:landscape){
-    #cabecera{
-        height: 120px;
-        left:0;
-    }
-    .barra{
-        margin-top:100px;
-        left:0;
-        line-height: .5rem;
-    }
-    #logo{
-        width: 150px;
-    }
-    #gif{
-        display:unset;
-        width: 100px;
-        margin-top:-160px;
-    }
-    .contenedor__titulo{
-        margin-top: 40px;
-    }
-    .titulo{
-        margin-top: 20px;
-        font-size: 3.5rem;
-    }
-    .casa{
-        width: 40px;
-    }
-    .barra a{
-        font-size: 1rem;
-    }
-}
+body{background-color:#fdeef2}#cabecera{display:block;position:fixed;margin-top:-20px;border-bottom:5px solid black;height:200px;width:100%;background-color:lemonchiffon}h1{font-size:80px;margin-top:-150px;margin-left:400px}#logo{margin-top:20px}.titulo{text-decoration:none;color:black}#gif{float:right;margin-top:-275px;margin-right:25px}.barra{display:block;position:fixed;margin-top:185px;font-family:Arial,Helvetica,sans-serif;width:10%;width:15%;height:100vh;background-color:rgba(5,33,51,.98)}.barra ul{padding:0;text-align:center;margin-top:0}.barra li{border-top:1px solid black;width:100%}.barra a{display:block;font-size:25px;color:white;padding:20px;text-decoration:none;list-style:none;transition:.4s all}.casa__contenedor{width:100%;display:flex;justify-content:center;align-items:center;margin-bottom:0}.casa{width:60px;color:#ffffff}.barra h2{font-size:40px;text-align:center;color:white;padding:15px;padding-bottom:7px}.barra ul:last-of-type{border-bottom:1px solid black}nav a:hover{font-size:30px;background-color:rgba(22,78,112,.98)}#articulo{width:84%;float:right;margin-top:240px;margin-left:350px}header h2{font-size:45px}h3{font-size:35px;text-decoration:underline}.ingredientes{font-size:25px}#ingr{width:40%}#pollo{margin-top:-350px;margin-left:45%}p{font-size:25px}#video{margin-left:calc(50% - 250px)}audio{margin-top:25px;margin-left:calc(50% - 140px)}footer{display:block;float:right;border-top:1px solid black;height:100px;margin-left:15%;margin-top:50px;font-family:arial;font-size:25px;text-align:center;font-weight:bold;width:85%}#a_img{font-size:10px}@media screen and (max-width:1056px){#pollo{margin-left:50%}#gif{display:none}}@media screen and (max-width:934px){.barra a{font-size:20px;color:white;display:block;padding:10px;text-decoration:none;list-style:none;transition:.3s all}nav a:hover{font-size:25px;padding:10px 0;background-color:rgba(22,78,112,.98)}}@media screen and (max-width:818px){.barra h2{font-size:20px;text-align:center;color:white;padding:15px;padding-bottom:7px}.barra a{font-size:15px;color:white;display:block;padding:10px;text-decoration:none;list-style:none;transition:.3s all}nav a:hover{font-size:15px;background-color:rgba(22,78,112,.98)}}@media screen and (max-width:759px){h1{font-size:50px}}@media screen and (max-width:721px){#pollo{display:none}#ingr{width:85%}}@media(max-height:500px) and (orientation:landscape){#cabecera{height:120px;left:0}.barra{margin-top:100px;left:0;line-height:.5rem}#logo{width:150px}#gif{display:unset;width:100px;margin-top:-160px}.contenedor__titulo{margin-top:40px}.titulo{margin-top:20px;font-size:3.5rem}.casa{width:40px}.barra a{font-size:1rem}}
