--- a/publico/css/calculadora.css
+++ b/publico/css/calculadora.css
@@ -1,437 +1,1 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-    font-family: consolas;
-}
-
-body{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-    min-height: 100vh;
-    background: #333;
-}
-
-body.claro{
-    background: #f8f8f8;
-}
-
-.contenedor{
-    position: relative;
-    min-width: 280px;
-    min-height: 350px;
-    max-width: 80%;
-    background: #333;
-    margin-top:20px;
-    padding: 30px 30px 30px 30px;
-    border-radius: 20px;
-    box-shadow:25px 25px 75px rgba(0, 0, 0, 1),
-    10px 10px 70px rgba(0, 0, 0, 0.25),
-    inset -5px -5px 15px rgba(0, 0, 0, 0.5),
-    inset 5px 5px 15px rgba(0,0,0,0.5);
-}
-body.claro .contenedor{
-    background: #fafafa;
-    box-shadow:25px 25px 75px rgba(0, 0, 0, 1),
-    10px 10px 70px rgba(0, 0, 0, 0.15),
-    inset -5px -5px 15px rgba(0, 0, 0, 0.15),
-    inset 5px 5px 15px rgba(0,0,0,0.05);
-}
-.calculadora{
-    position: relative;
-    display: grid;
-}
-.calculadora .pantalla{
-    position: relative;
-    grid-column: span 4;
-    height: 100px;
-    width: calc(100% - 5px);
-    border:none;
-    outline: none;
-    background: #a7af7c;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 0 2px rgba(0,0,0,0.75);
-    text-align: right;
-    padding: 10px;
-    font-size: 2em;
-}
-.calculadora span{
-    position: relative;
-    display: grid;
-    place-items: center;
-    width: 50px;
-    height: 50px;
-    margin:4px 0;
-    background: linear-gradient(180deg, #2f2f2f, #3f3f3f);
-    box-shadow: inset -8px 0 8px rgba(0,0,0,0.15),
-    inset 0 -8px 8px rgba(0, 0, 0, 0.25),
-    0 0 0 2px rgba(0,0,0,0.75),
-    10px 20px 25px rgba(0, 0, 0, 0.4);
-    color:#fff;
-    user-select: none;
-    cursor: pointer;
-    font-weight: 400;
-    border-radius: 10px;
-}
-
-body.claro .calculadora span{
-    background: linear-gradient(180deg, #fafafa, #f4f4f4);
-    box-shadow: inset -8px 0 8px rgba(0,0,0,0.15),
-    inset 0 -8px 8px rgba(0, 0, 0, 0.15),
-    0 0 0 2px rgba(0,0,0,1),
-    10px 20px 25px rgba(0, 0, 0, 0.25);
-}
-
-.calculadora span::before{
-    content: '';
-    position: absolute;
-    top:3px;
-    left:2px;
-    bottom: 6px;
-    right: 6px;
-    background: linear-gradient(90deg, #2d2d2d, #4d4d4d);
-    border-radius: 10px;
-    box-shadow: -5px -5px 15px rgba(0, 0, 0, 0.1),
-    10px 5px 10px rgba(0,0,0,0.15);
-    border-left: 1px solid #0004;
-    border-bottom: 1px solid #0004;
-    border-top: 1px solid #0009;
-}
-
-body.claro .calculadora span::before{
-    background: linear-gradient(90deg, #e6e6e6, #efefef);
-    border-radius: 10px;
-    box-shadow: -10px -10px 10px rgba(255,255,255,0.25),
-    10px 5px 10px rgba(0,0,0,0.15);
-    border-left: 1px solid #fff4;
-    border-bottom: 1px solid #fff4;
-    border-top: 1px solid #fff9;
-}
-.calculadora span:active{
-    filter: brightness(1.5);
-}
-body.claro .calculadora span:active{
-    filter:brightness(0.9);
-}
-.calculadora span i{
-    position:relative;
-    font-style: normal;
-    font-size: 1.5em;
-    text-transform: uppercase;
-}
-.calculadora .igual i{
-    top:-2px;
-}
-.calculadora .por i{
-    top:2px;
-}
-body.claro .calculadora span i{
-    color: #333;
-}
-
-body.claro .calculadora span.limpiar i,
-body.claro .calculadora span.igual i,
-body.claro .calculadora span.mas i{
-    color:#fff;
-}
-body.claro .calculadora .limpiar,
-.calculadora .limpiar{
-    grid-column: span 2;
-    width: 100px;
-    background: #f00;
-}
-body.claro .calculadora .limpiar::before,
-.calculadora .limpiar::before{
-    background: linear-gradient(90deg, #d20000, #ffffff5c);
-    border-left: 1px solid #fff4;
-    border-bottom: 1px solid #fff4;
-    border-top: 1px solid #fff4;
-}
-.calculadora .mas{
-    background: rgb(2, 181, 2);
-    grid-row: span 2;
-    height: 110px;
-}
-body.claro .calculadora .mas,
-.calculadora .mas{
-    background: rgb(2, 181, 2);
-}
-body.claro .calculadora .mas::before,
-.calculadora .mas::before{
-    background: linear-gradient(90deg, rgb(0, 132, 0), #ffffff5c);
-    border-left: 1px solid #fff4;
-    border-bottom: 1px solid #fff4;
-    border-top: 1px solid #fff4;
-}
-
-body.claro .calculadora .igual,
-.calculadora .igual{
-    background: #2196f3;
-}
-
-body.claro .calculadora .igual::before,
-.calculadora .igual::before{
-    background: linear-gradient(90deg, #1479c9, #ffffff5c);
-    border-left: 1px solid #fff4;
-    border-bottom: 1px solid #fff4;
-    border-top: 1px solid #fff4;
-}
-
-.boton__fondo,
-.boton__casa{
-    position: absolute;
-    top:5px;
-    padding: 0 10px;
-    height: 50px;
-    background: #333;
-    font-size: 1.5em;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25),
-    5px 5px 30px rgba(0, 0, 0, 0.25),
-    inset -2px -2px 5px rgba(0, 0, 0, 0.25),
-    inset 2px 2px 5px rgba(0, 0, 0, 0.25);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    border-radius: 10px;
-}
-.boton__fondo{
-    left:51%; 
-}
-.boton__casa{
-    left:33%;
-}
-body.claro .boton__fondo,
-body.claro .boton__casa{
-    background-color: #fafafa;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1),
-    5px 5px 30px rgba(0, 0, 0, 0.1),
-    inset -2px -2px 5px rgba(0, 0, 0, 0.1),
-    inset 2px 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.boton__fondo strong{
-    display: none;
-}
-
-.boton__fondo strong:nth-child(1){
-    display: block;
-}
-
-body.claro .boton__fondo strong:nth-child(1){
-    display: none;
-}
-body.claro .boton__fondo strong:nth-child(2){
-    display: block;
-}
-
-.borrar i .icon-tabler-backspace{
-    stroke:#ffffff;
-    padding: 3px 4px 0 0; 
-}
-body.claro .borrar i .icon-tabler-backspace{
-    stroke:#000;
-}
-
-@media (min-width:400px){
-    .contenedor{
-        padding: 30px 30px 30px 40px;
-    }
-    .calculadora .pantalla{
-        width: calc(100% - 15px);
-    }
-    .calculadora span{
-        width: 55px;
-        height: 55px;
-    }
-    body.claro .calculadora .limpiar,
-    .calculadora .limpiar{
-        width: 120px;
-    }
-    .calculadora .mas{
-        height: 120px;
-    }
-    .boton__fondo{
-        left:50%;
-    }
-    .boton__casa{
-        left:35%;
-    }
-}
-@media (min-width:460px){
-    .contenedor{
-        margin-top:50px;
-        padding: 30px 20px 30px 40px;
-    }
-    .calculadora .pantalla{
-        width: calc(100% - 25px);
-        margin-bottom: 10px;
-    }
-    .calculadora span{
-        width: 60px;
-        height: 60px;
-        margin:4px 0;
-    }
-    
-    body.claro .calculadora .limpiar,
-    .calculadora .limpiar{
-        width: 140px;
-    }
-
-    .calculadora .mas{
-        height: 130px;
-    }
-    .boton__fondo{
-        left:52%;
-    }
-    .boton__casa{
-        left:37%;
-    }
-}
-@media (min-width:500px){
-    .contenedor{
-        min-width: 300px;
-        min-height: 400px;
-        margin-top:-5px;
-        padding: 30px 15px 20px 40px;
-    }
-    .calculadora span{
-        width: 70px;
-        height: 70px;
-        margin:5px 0;
-    }
-    body.claro .calculadora .limpiar,
-    .calculadora .limpiar{
-        width: 150px;
-    }
-    .calculadora .mas{
-        height: 150px;
-    }
-    .boton__fondo{
-        right:0;
-        left: auto;
-        padding: 0 10px;
-        height: 50px;
-    }
-    .boton__casa{
-        left:0;
-    }
-}
-@media (min-width:550px){
-    .contenedor{
-        padding: 30px 15px 20px 40px;
-        margin-top: -5px;
-    }
-    .calculadora span{
-        width: 70px;
-        height: 70px;
-        margin:6px;
-    }
-    body.claro .calculadora .limpiar,
-    .calculadora .limpiar{
-        width: 170px;
-    }
-    .calculadora .mas{
-        height: 155px;
-    }
-    .boton__fondo{
-        top:5px;
-        right:5px;
-    }
-}
-@media (min-width:600px){
-    .contenedor{
-        margin-top:0;
-        padding: 30px 15px 20px 40px;
-    }
-    .calculadora .pantalla{
-        width: calc(100% - 35px);
-        left: 5px;
-    }
-}
-@media (min-height: 650px) and (min-width: 600px){
-    .contenedor{
-        min-width: 300px;
-        min-height: 400px;
-        padding: 40px 30px 30px;
-    }
-    .calculadora .pantalla{
-        width: calc(100% - 20px);
-        left:10px;
-    }
-    .calculadora span{
-        width: 80px;
-        height: 80px;
-        margin:8px;
-    }
-    .calculadora span::before{
-        top:3px;
-        left:4px;
-        bottom: 14px;
-        right: 12px;
-    }
-    body.claro .calculadora .limpiar,
-    .calculadora .limpiar{
-        width: 180px;
-    }
-    .calculadora .mas{
-        height: 180px;
-    }
-    .boton__fondo{
-        top:20px;
-        right:20px;
-        width: 60px;
-        height: 60px;
-    }
-    .boton__casa{
-        top:20px;
-        left:20px;
-        width: 60px;
-        height: 60px;
-    }
-}
-@media(max-height:500px) and (orientation:landscape){
-    .contenedor{
-        width: 100px;
-        padding: 40px 30px 30px;
-        margin-top:20px;
-        margin-bottom: 20px;
-    }
-    .calculadora .pantalla{
-        width: 100%;
-        left:0;
-    }
-    .calculadora span{
-        width: 50px;
-        height: 40px;
-        margin:4px;
-    }
-    .calculadora span::before{
-        top:3px;
-        left:4px;
-        bottom: 5px;
-        right: 7px;
-    }
-    body.claro .calculadora .limpiar,
-    .calculadora .limpiar{
-        width: 100px;
-    }
-    .calculadora .mas{
-        height: 90px;
-    }
-    .boton__fondo{
-        top:20px;
-        right:20px;
-        width: 60px;
-        height: 60px;
-    }
-    .boton__casa{
-        top:20px;
-        left:20px;
-        width: 60px;
-        height: 60px;
-    }
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:consolas}body{display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:100vh;background:#333}body.claro{background:#f8f8f8}.contenedor{position:relative;min-width:280px;min-height:350px;max-width:80%;background:#333;margin-top:20px;padding:30px 30px 30px 30px;border-radius:20px;box-shadow:25px 25px 75px rgba(0,0,0,1),10px 10px 70px rgba(0,0,0,.25),inset -5px -5px 15px rgba(0,0,0,.5),inset 5px 5px 15px rgba(0,0,0,.5)}body.claro .contenedor{background:#fafafa;box-shadow:25px 25px 75px rgba(0,0,0,1),10px 10px 70px rgba(0,0,0,.15),inset -5px -5px 15px rgba(0,0,0,.15),inset 5px 5px 15px rgba(0,0,0,.05)}.calculadora{position:relative;display:grid}.calculadora .pantalla{position:relative;grid-column:span 4;height:100px;width:calc(100% - 5px);border:none;outline:none;background:#a7af7c;margin-bottom:10px;border-radius:10px;box-shadow:0 0 0 2px rgba(0,0,0,.75);text-align:right;padding:10px;font-size:2em}.calculadora span{position:relative;display:grid;place-items:center;width:50px;height:50px;margin:4px 0;background:linear-gradient(180deg,#2f2f2f,#3f3f3f);box-shadow:inset -8px 0 8px rgba(0,0,0,.15),inset 0 -8px 8px rgba(0,0,0,.25),0 0 0 2px rgba(0,0,0,.75),10px 20px 25px rgba(0,0,0,.4);color:#fff;user-select:none;cursor:pointer;font-weight:400;border-radius:10px}body.claro .calculadora span{background:linear-gradient(180deg,#fafafa,#f4f4f4);box-shadow:inset -8px 0 8px rgba(0,0,0,.15),inset 0 -8px 8px rgba(0,0,0,.15),0 0 0 2px rgba(0,0,0,1),10px 20px 25px rgba(0,0,0,.25)}.calculadora span::before{content:'';position:absolute;top:3px;left:2px;bottom:6px;right:6px;background:linear-gradient(90deg,#2d2d2d,#4d4d4d);border-radius:10px;box-shadow:-5px -5px 15px rgba(0,0,0,.1),10px 5px 10px rgba(0,0,0,.15);border-left:1px solid #0004;border-bottom:1px solid #0004;border-top:1px solid #0009}body.claro .calculadora span::before{background:linear-gradient(90deg,#e6e6e6,#efefef);border-radius:10px;box-shadow:-10px -10px 10px rgba(255,255,255,.25),10px 5px 10px rgba(0,0,0,.15);border-left:1px solid #fff4;border-bottom:1px solid #fff4;border-top:1px solid #fff9}.calculadora span:active{filter:brightness(1.5)}body.claro .calculadora span:active{filter:brightness(.9)}.calculadora span i{position:relative;font-style:normal;font-size:1.5em;text-transform:uppercase}.calculadora .igual i{top:-2px}.calculadora .por i{top:2px}body.claro .calculadora span i{color:#333}body.claro .calculadora span.limpiar i,body.claro .calculadora span.igual i,body.claro .calculadora span.mas i{color:#fff}body.claro .calculadora .limpiar,.calculadora .limpiar{grid-column:span 2;width:100px;background:#f00}body.claro .calculadora .limpiar::before,.calculadora .limpiar::before{background:linear-gradient(90deg,#d20000,#ffffff5c);border-left:1px solid #fff4;border-bottom:1px solid #fff4;border-top:1px solid #fff4}.calculadora .mas{background:rgb(2,181,2);grid-row:span 2;height:110px}body.claro .calculadora .mas,.calculadora .mas{background:rgb(2,181,2)}body.claro .calculadora .mas::before,.calculadora .mas::before{background:linear-gradient(90deg,rgb(0,132,0),#ffffff5c);border-left:1px solid #fff4;border-bottom:1px solid #fff4;border-top:1px solid #fff4}body.claro .calculadora .igual,.calculadora .igual{background:#2196f3}body.claro .calculadora .igual::before,.calculadora .igual::before{background:linear-gradient(90deg,#1479c9,#ffffff5c);border-left:1px solid #fff4;border-bottom:1px solid #fff4;border-top:1px solid #fff4}.boton__fondo,.boton__casa{position:absolute;top:5px;padding:0 10px;height:50px;background:#333;font-size:1.5em;box-shadow:5px 5px 15px rgba(0,0,0,.25),5px 5px 30px rgba(0,0,0,.25),inset -2px -2px 5px rgba(0,0,0,.25),inset 2px 2px 5px rgba(0,0,0,.25);display:flex;justify-content:center;align-items:center;cursor:pointer;border-radius:10px}.boton__fondo{left:51%}.boton__casa{left:33%}body.claro .boton__fondo,body.claro .boton__casa{background-color:#fafafa;box-shadow:5px 5px 15px rgba(0,0,0,.1),5px 5px 30px rgba(0,0,0,.1),inset -2px -2px 5px rgba(0,0,0,.1),inset 2px 2px 5px rgba(0,0,0,.1)}.boton__fondo strong{display:none}.boton__fondo strong:nth-child(1){display:block}body.claro .boton__fondo strong:nth-child(1){display:none}body.claro .boton__fondo strong:nth-child(2){display:block}.borrar i .icon-tabler-backspace{stroke:#ffffff;padding:3px 4px 0 0}body.claro .borrar i .icon-tabler-backspace{stroke:#000}@media (min-width:400px){.contenedor{padding:30px 30px 30px 40px}.calculadora .pantalla{width:calc(100% - 15px)}.calculadora span{width:55px;height:55px}body.claro .calculadora .limpiar,.calculadora .limpiar{width:120px}.calculadora .mas{height:120px}.boton__fondo{left:50%}.boton__casa{left:35%}}@media (min-width:460px){.contenedor{margin-top:50px;padding:30px 20px 30px 40px}.calculadora .pantalla{width:calc(100% - 25px);margin-bottom:10px}.calculadora span{width:60px;height:60px;margin:4px 0}body.claro .calculadora .limpiar,.calculadora .limpiar{width:140px}.calculadora .mas{height:130px}.boton__fondo{left:52%}.boton__casa{left:37%}}@media (min-width:500px){.contenedor{min-width:300px;min-height:400px;margin-top:-5px;padding:30px 15px 20px 40px}.calculadora span{width:70px;height:70px;margin:5px 0}body.claro .calculadora .limpiar,.calculadora .limpiar{width:150px}.calculadora .mas{height:150px}.boton__fondo{right:0;left:auto;padding:0 10px;height:50px}.boton__casa{left:0}}@media (min-width:550px){.contenedor{padding:30px 15px 20px 40px;margin-top:-5px}.calculadora span{width:70px;height:70px;margin:6px}body.claro .calculadora .limpiar,.calculadora .limpiar{width:170px}.calculadora .mas{height:155px}.boton__fondo{top:5px;right:5px}}@media (min-width:600px){.contenedor{margin-top:0;padding:30px 15px 20px 40px}.calculadora .pantalla{width:calc(100% - 35px);left:5px}}@media (min-height:650px) and (min-width:600px){.contenedor{min-width:300px;min-height:400px;padding:40px 30px 30px}.calculadora .pantalla{width:calc(100% - 20px);left:10px}.calculadora span{width:80px;height:80px;margin:8px}.calculadora span::before{top:3px;left:4px;bottom:14px;right:12px}body.claro .calculadora .limpiar,.calculadora .limpiar{width:180px}.calculadora .mas{height:180px}.boton__fondo{top:20px;right:20px;width:60px;height:60px}.boton__casa{top:20px;left:20px;width:60px;height:60px}}@media(max-height:500px) and (orientation:landscape){.contenedor{width:100px;padding:40px 30px 30px;margin-top:20px;margin-bottom:20px}.calculadora .pantalla{width:100%;left:0}.calculadora span{width:50px;height:40px;margin:4px}.calculadora span::before{top:3px;left:4px;bottom:5px;right:7px}body.claro .calculadora .limpiar,.calculadora .limpiar{width:100px}.calculadora .mas{height:90px}.boton__fondo{top:20px;right:20px;width:60px;height:60px}.boton__casa{top:20px;left:20px;width:60px;height:60px}}
